--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "brakes"
 version = "0.1.0"
 edition = "2021"
+authors = ["Mohammad Samir <mo.samir.yos@gmail.com>"]
+description = "A distributed rate limiting library"
+keywords = ["ratelimit", "actix-web", "axum", "middleware", "rate-limiting"]
+repository = "https://github.com/mohammadsamir/brakes"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 bincode = "1.3.3"
