--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,11 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
       with:
-        components: rustfmt
+        components: clippy, rustfmt
     - uses: Swatinem/rust-cache@v2
     - name: rustfmt
       run: cargo fmt --all --check
+    - name: clippy
+      run: cargo clippy --workspace --all-targets --all-features -- -D warnings
     - name: test
       run: cargo test
